# rubipont

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: DEEP_RESEARCH_PROMPT.md  LiDAR Format Translation Library Research.md  ROS Bag_MCAP Rust Library Research.md  SCOPE.md  USER_GUIDE.md  ros-mcap-deep-research-prompt.md
docs/adr/: 001-internal-point-format.md
docs/superpowers/plans/: 2026-05-26-rubipont-e57.md  2026-05-26-rubipont-mcap.md  2026-05-26-rubipont-mvp.md
docs/superpowers/specs/: 2026-05-26-pointbridge-design.md  2026-05-26-rubipont-design.md
rubipont-cli/: Cargo.toml
rubipont-cli/src/: main.rs
rubipont-cli/tests/: cli_integration.rs
rubipont-core/: Cargo.toml
rubipont-core/benches/: conversion.rs
rubipont-core/src/: array.rs  error.rs  format.rs  layout.rs  lib.rs  pipeline.rs  transform.rs
rubipont-core/src/format/: bag.rs  e57.rs  las.rs  laz.rs  mcap.rs  mod.rs  pcd.rs  pointcloud2.rs
rubipont-core/tests/: roundtrip_las_laz.rs  roundtrip_las_pcd.rs  test_bag.rs  test_convert.rs  test_e57.rs  test_e57_write.rs  test_error.rs  test_las.rs  test_laz.rs  test_mcap.rs  test_mcap_write.rs  test_pcd.rs
rubipont-py/: Cargo.toml  pyproject.toml
rubipont-py/rubipont/: __init__.py
rubipont-py/src/: lib.rs
wasm-demo/: build.sh  index.html
