[package]
name = "rubipont-cli"
version = "0.1.2"
edition = "2021"
description = "CLI for rubipont LiDAR format translation"

[[bin]]
name = "rp"
path = "src/main.rs"

[features]
mcap-io = ["rubipont-core/mcap-io"]

[dependencies]
rubipont-core = { path = "../rubipont-core" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
las = "0.9"
