[package]
name = "rubipont-core"
version = "0.1.0"
edition = "2021"
description = "Zero-copy LiDAR point cloud format translation — core library"

[dependencies]
las = "0.9"
laz = "0.12"
bytemuck = "1"
byteorder = "1"
thiserror = "2"
e57 = "0.11.12"
mcap = { version = "0.24.0", features = ["lz4"] }
memmap2 = "0.9"
rosbag = "0.6.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "conversion"
harness = false
