[package]
name = "rubipont-py"
version = "0.1.3"
edition = "2021"
description = "Python bindings for rubipont LiDAR format translation"

[lib]
name = "rubipont"
crate-type = ["cdylib"]

[features]
default = ["mcap-io"]
mcap-io = ["rubipont-core/mcap-io"]
proj = ["rubipont-core/proj"]

[dependencies]
rubipont-core = { path = "../rubipont-core" }
pyo3 = { version = "0.29", features = ["extension-module"] }
