[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rubipont"
version = "0.1.0"
description = "Zero-copy LiDAR point cloud format translation library"
requires-python = ">=3.8"

[tool.maturin]
# proj feature requires native PROJ libraries — install separately if needed
